# OptimalBins

./: .gitignore  LICENSE  README.md  pyproject.toml
binpacking/: config.py
binpacking/algorithms/: base.py
binpacking/algorithms/_2d/: bottom_left.py  first_fit.py  guillotine.py  maxrects.py
binpacking/algorithms/_3d/: advanced_3dbinpacking.py
binpacking/common/: constants.py  packing_result.py
binpacking/demos/: demo.py
binpacking/models/: bin.py  item.py  manager.py
binpacking/tests/: test_guillotine.py  test_maxrect.py
binpacking/visualization/: plotter.py
demos/: demo.py
optimalbins/algorithms/: base.py
optimalbins/algorithms/_2d/: bottom_left.py  first_fit.py  guillotine.py  maxrects.py
optimalbins/algorithms/_3d/: advanced_3dbinpacking.py
optimalbins/common/: packing_result.py  utils.py
optimalbins/models/: bin.py  item.py  manager.py
optimalbins/visualization/: plotter.py
tests/: test_bottomleft.py  test_guillotine.py  test_maxrect.py
